[package]
name = "hello-world-kernel"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tezos-smart-rollup = { git = "https://gitlab.com/tezos/tezos.git" }
tezos_data_encoding = "0.5"
tezos_crypto_rs = { version = "0.5", default-features = false }
nom = "7.1"

[dev-dependencies]
tezos-smart-rollup = { git = "https://gitlab.com/tezos/tezos.git", features = ["testing"] }
